2005-10-15  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyBadCertRejector.h:

	Remove debug output.
	
2005-10-15  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-persist.h:

	Add EPHY_EMBED_PERSIST_NO_CERTDIALOGS flag.

        * embed/mozilla/Makefile.am:
	A embed/mozilla/EphyBadCertRejector.cpp:
	A embed/mozilla/EphyBadCertRejector.h:

	A class implementing nsIBadCertListener which always rejects.

	* embed/mozilla/EphyHeaderSniffer.cpp:
	* embed/mozilla/EphyHeaderSniffer.h:
	* embed/mozilla/MozDownload.cpp:
	* embed/mozilla/MozDownload.h:

	For gecko 1.8, implement nsIInterfaceRequestor for EphyHeaderSniffer
	and MozDownload, and make GetInterface hand out a EphyBadCertRejector
	if the EPHY_EMBED_PERSIST_NO_CERTDIALOGS flag is set.

2005-10-14  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed.cpp:

	Work around mozilla bug
	https://bugzilla.mozilla.org/show_bug.cgi?id=312241 .

2005-10-12  Philip Langdale  <philipl@mail.utexas.edu>

	* src/ephy-tab.c: (open_link_in_new_tab):
	Copy the back history when a link is opened in
	a new tab from a middle-click or a ctrl-click.

2005-10-12  Philip Langdale  <philipl@mail.utexas.edu>

	* src/ephy-navigation-action.c:
	(activate_back_or_forward_menu_item_cb). Forgot to
	remove the unused url variable.

2005-10-12  Philip Langdale  <philipl@mail.utexas.edu>

	* embed/ephy-embed.c
	* embed/ephy-embed.h: (ephy_embed_shistory_copy).
	Add a method to copy the back/forward history from
	one embed to another.

	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/EphyBrowser.h:
	(EphyBrowser::CopySHistory) Implementation of 
	history copying.

	* embed/mozilla/mozilla-embed.cpp:
	Implement ephy_embed_shistory_copy by calling into
	EphyBrowser.

	* src/ephy-navigation-action.c:
	(activate_back_or_forward_menu_item_cb). If a
	history menu item is middle-clicked on, open a new
	tab, copy the history over and then go to the
	relevant page in the history.
