@@ -1,5 +1,13 @@
 2005-10-15  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_download),
+	(ephy_favicon_cache_get):
+	* embed/mozilla/EphyBrowser.cpp:
+
+	Allow favicons for https: sites on gecko 1.9.
+
+2005-10-15  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/EphyBadCertRejector.h:
 
 	Remove debug output.
